[package]
name = "Real-Time_Timer"
version = "0.1.0"
authors = ["Thomas Bartlett <thomasbartlett8@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.21.0", features = ["esp32c3"] }

esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }

critical-section = { version = "1.1.0" }

esp-backtrace = { version = "0.14.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }

libm = "0.2.6"

log = "0.4.17"